base layout and some assets

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "vite-tsconfig-paths": "3.5.0"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "daisyui": "^2.51.1"
   }
 }
