--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "my-qwik-basic-starter",
-  "description": "App with Routing built-in (recommended)",
+  "name": "tld-item-logger",
+  "description": "The Long Dark Item Logger app with map built with Qwik",
   "engines": {
     "node": ">=15.0.0"
   },
+  "version": "0.0.3",
   "private": true,
   "scripts": {
     "build": "qwik build",
