--- a/package.json
+++ b/package.json
@@ -23,26 +23,31 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "0.21.0",
-    "@builder.io/qwik-city": "0.5.3",
-    "@types/eslint": "8.21.1",
+    "@builder.io/qwik": "^0.21.0",
+    "@builder.io/qwik-city": "^0.5.3",
+    "@planetscale/database": "^1.6.0",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/eslint": "^8.21.1",
     "@types/node": "^18.15.0",
     "@types/node-fetch": "latest",
-    "@typescript-eslint/eslint-plugin": "5.54.1",
-    "@typescript-eslint/parser": "5.54.1",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
     "autoprefixer": "^10.4.14",
-    "eslint": "8.36.0",
-    "eslint-plugin-qwik": "0.21.0",
-    "node-fetch": "3.3.1",
+    "daisyui": "^2.51.3",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.36.0",
+    "eslint-plugin-qwik": "^0.21.0",
+    "fetch-h2": "^3.0.2",
+    "kysely": "^0.23.5",
+    "kysely-planetscale": "^1.3.0",
+    "node-fetch": "^3.3.1",
     "postcss": "^8.4.21",
     "prettier": "2.8.4",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5",
-    "undici": "5.20.0",
+    "undici": "^5.20.0",
     "vercel": "^28.16.15",
-    "vite": "4.1.4",
-    "vite-tsconfig-paths": "4.0.5",
-    "@tailwindcss/typography": "^0.5.9",
-    "daisyui": "^2.51.3"
+    "vite": "^4.1.4",
+    "vite-tsconfig-paths": "^4.0.5"
   }
 }
