TLD-11 db save [WIP]

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@builder.io/qwik": "^0.21.0",
     "@builder.io/qwik-city": "^0.5.3",
     "@planetscale/database": "^1.6.0",
+    "@prisma/client": "^4.11.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/eslint": "^8.21.1",
     "@types/node": "^18.15.0",
@@ -34,7 +35,6 @@
     "@typescript-eslint/parser": "^5.54.1",
     "autoprefixer": "^10.4.14",
     "daisyui": "^2.51.3",
-    "dotenv": "^16.0.3",
     "eslint": "^8.36.0",
     "eslint-plugin-qwik": "^0.21.0",
     "fetch-h2": "^3.0.2",
@@ -43,6 +43,7 @@
     "node-fetch": "^3.3.1",
     "postcss": "^8.4.21",
     "prettier": "2.8.4",
+    "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5",
     "undici": "^5.20.0",
