--- a/package.json
+++ b/package.json
@@ -23,32 +23,30 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^0.21.0",
-    "@builder.io/qwik-city": "^0.5.3",
-    "@planetscale/database": "^1.6.0",
-    "@prisma/client": "^4.11.0",
+    "@builder.io/qwik": "^0.22.1",
+    "@builder.io/qwik-city": "^0.6.3",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/eslint": "^8.21.1",
-    "@types/node": "^18.15.0",
+    "@types/eslint": "^8.21.2",
+    "@types/node": "^18.15.3",
     "@types/node-fetch": "latest",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "@prisma/client": "^4.11.0",
     "autoprefixer": "^10.4.14",
-    "daisyui": "^2.51.3",
+    "daisyui": "^2.51.4",
     "eslint": "^8.36.0",
-    "eslint-plugin-qwik": "^0.21.0",
-    "fetch-h2": "^3.0.2",
-    "kysely": "^0.23.5",
-    "kysely-planetscale": "^1.3.0",
+    "eslint-plugin-qwik": "^0.22.1",
+    "mongoose": "^7.0.2",
     "node-fetch": "^3.3.1",
     "postcss": "^8.4.21",
     "prettier": "2.8.4",
     "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7",
-    "typescript": "4.9.5",
-    "undici": "^5.20.0",
-    "vercel": "^28.16.15",
-    "vite": "^4.1.4",
-    "vite-tsconfig-paths": "^4.0.5"
+    "typescript": "^5.0.2",
+    "undici": "^5.21.0",
+    "vercel": "^28.17.0",
+    "vite": "^4.2.0",
+    "vite-tsconfig-paths": "^4.0.7",
+    "zod-prisma-types": "^2.5.1"
   }
 }
