--- a/package.json
+++ b/package.json
@@ -20,33 +20,32 @@
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik"
+    "qwik": "qwik",
+    "migration": "npx drizzle-kit generate:mysql --schema src/db/schema.ts"
   },
   "devDependencies": {
     "@builder.io/qwik": "^0.23.0",
     "@builder.io/qwik-city": "^0.6.5",
+    "@planetscale/database": "^1.6.0",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/eslint": "^8.21.2",
+    "@types/eslint": "^8.21.3",
     "@types/node": "^18.15.3",
-    "@types/node-fetch": "latest",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
-    "@prisma/client": "^4.11.0",
     "autoprefixer": "^10.4.14",
     "daisyui": "^2.51.4",
+    "drizzle-kit": "^0.17.0",
+    "drizzle-orm": "^0.21.0",
     "eslint": "^8.36.0",
     "eslint-plugin-qwik": "^0.23.0",
-    "mongoose": "^7.0.2",
-    "node-fetch": "^3.3.1",
+    "mysql2": "^3.2.0",
     "postcss": "^8.4.21",
     "prettier": "2.8.4",
-    "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7",
     "typescript": "^5.0.2",
     "undici": "^5.21.0",
     "vercel": "^28.17.0",
     "vite": "^4.2.0",
-    "vite-tsconfig-paths": "^4.0.7",
-    "zod-prisma-types": "^2.5.1"
+    "vite-tsconfig-paths": "^4.0.7"
   }
 }
