--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     }
   },
   "files": ["./.eslintrc.cjs"],
-  "include": ["src", "./package.json", "./vite-env.d.ts", "./prisma/generated/**/*.ts"]
+  "include": ["src", "./package.json", "./vite-env.d.ts"]
 }
