--- a/package.json
+++ b/package.json
@@ -20,29 +20,32 @@
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik"
+    "qwik": "qwik",
+    "migration": "npx drizzle-kit generate:mysql --schema src/db/schema.ts"
   },
   "devDependencies": {
-    "@builder.io/qwik": "0.21.0",
-    "@builder.io/qwik-city": "0.5.3",
-    "@types/eslint": "8.21.1",
-    "@types/node": "^18.15.0",
-    "@types/node-fetch": "latest",
-    "@typescript-eslint/eslint-plugin": "5.54.1",
-    "@typescript-eslint/parser": "5.54.1",
+    "@builder.io/qwik": "^0.23.0",
+    "@builder.io/qwik-city": "^0.6.5",
+    "@planetscale/database": "^1.6.0",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/eslint": "^8.21.3",
+    "@types/node": "^18.15.3",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "8.36.0",
-    "eslint-plugin-qwik": "0.21.0",
-    "node-fetch": "3.3.1",
+    "daisyui": "^2.51.4",
+    "drizzle-kit": "^0.17.0",
+    "drizzle-orm": "^0.21.0",
+    "eslint": "^8.36.0",
+    "eslint-plugin-qwik": "^0.23.0",
+    "mysql2": "^3.2.0",
     "postcss": "^8.4.21",
     "prettier": "2.8.4",
     "tailwindcss": "^3.2.7",
-    "typescript": "4.9.5",
-    "undici": "5.20.0",
-    "vercel": "^28.16.15",
-    "vite": "4.1.4",
-    "vite-tsconfig-paths": "4.0.5",
-    "@tailwindcss/typography": "^0.5.9",
-    "daisyui": "^2.51.3"
+    "typescript": "^5.0.2",
+    "undici": "^5.21.0",
+    "vercel": "^28.17.0",
+    "vite": "^4.2.0",
+    "vite-tsconfig-paths": "^4.0.7"
   }
 }
