Update "@types/node" dependency to version "^18.15.6".

--- a/package.json
+++ b/package.json
@@ -29,22 +29,21 @@
     "@planetscale/database": "^1.6.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/eslint": "^8.21.3",
-    "@types/node": "^18.15.5",
+    "@types/node": "^18.15.6",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
     "daisyui": "^2.51.5",
     "drizzle-kit": "^0.17.0",
-    "drizzle-orm": "^0.21.0",
+    "drizzle-orm": "0.21.0",
     "eslint": "^8.36.0",
     "eslint-plugin-qwik": "^0.23.0",
-    "mysql2": "^3.2.0",
     "postcss": "^8.4.21",
     "prettier": "2.8.6",
     "tailwindcss": "^3.2.7",
     "typescript": "^5.0.2",
     "undici": "^5.21.0",
-    "vercel": "^28.17.0",
+    "vercel": "^28.18.1",
     "vite": "^4.2.1",
     "vite-tsconfig-paths": "^4.0.7"
   }
