Add new drizzle config and update package version to 0.2.0. Remove unused migration code and unused meta files, and update dependencies to latest versions. Also add key props to mapped elements in RouterHead component

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "engines": {
     "node": ">=15.0.0"
   },
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "build": "qwik build",
@@ -21,11 +21,11 @@
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
     "qwik": "qwik",
-    "migration": "npx drizzle-kit generate:mysql --schema src/db/schema.ts"
+    "db:push": "pnpm drizzle-kit push:mysql"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^0.23.0",
-    "@builder.io/qwik-city": "^0.6.6",
+    "@builder.io/qwik": "^0.24.0",
+    "@builder.io/qwik-city": "^0.7.0",
     "@planetscale/database": "^1.6.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/eslint": "^8.21.3",
@@ -34,10 +34,10 @@
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
     "daisyui": "^2.51.5",
-    "drizzle-kit": "^0.17.0",
-    "drizzle-orm": "0.21.0",
+    "drizzle-kit": "0.17.0-0cf3fe9",
+    "drizzle-orm": "0.22.0-88c1ad3",
     "eslint": "^8.36.0",
-    "eslint-plugin-qwik": "^0.23.0",
+    "eslint-plugin-qwik": "^0.24.0",
     "postcss": "^8.4.21",
     "prettier": "2.8.7",
     "tailwindcss": "^3.2.7",
