--- a/drizzle.config.json
+++ b/drizzle.config.json
@@ -1,4 +1,4 @@
 {
   "schema": "./src/db/schema.ts",
-  "connectionString": "mysql://root@127.0.0.1:3306/tld-item-logger?ssl={\"rejectUnauthorized\":true}"
+  "connectionString": "mysql://root@127.0.0.1:3306/tld-item-logger"
 }
