--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
     "db:push": "pnpm drizzle-kit push:mysql --config ./drizzle.config.ts"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^0.104.0",
-    "@builder.io/qwik-city": "^0.104.0",
+    "@builder.io/qwik": "^0.105.0",
+    "@builder.io/qwik-city": "^0.105.0",
     "@planetscale/database": "^1.7.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/eslint": "^8.37.0",
-    "@types/node": "^18.16.1",
+    "@types/node": "^18.16.3",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "autoprefixer": "^10.4.14",
     "daisyui": "^2.51.6",
-    "drizzle-kit": "0.17.6-76e73f3",
+    "drizzle-kit": "0.17.6",
     "drizzle-orm": "0.25.3",
     "eslint": "^8.39.0",
-    "eslint-plugin-qwik": "^0.104.0",
+    "eslint-plugin-qwik": "^0.105.0",
     "postcss": "^8.4.23",
     "prettier": "2.8.8",
     "tailwindcss": "^3.3.2",
