--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "@planetscale/database": "^1.7.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/eslint": "^8.37.0",
-    "@types/node": "^20.1.2",
+    "@types/node": "^20.1.3",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "autoprefixer": "^10.4.14",
     "daisyui": "^2.51.6",
-    "drizzle-kit": "0.17.6-76e73f3",
+    "drizzle-kit": "0.17.6",
     "drizzle-orm": "0.25.4",
     "eslint": "^8.40.0",
     "eslint-plugin-qwik": "^1.1.1",
@@ -43,7 +43,7 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4",
     "undici": "^5.22.1",
-    "vercel": "^29.2.1",
+    "vercel": "^29.3.0",
     "vite": "^4.3.5",
     "vite-tsconfig-paths": "^4.2.0"
   }
