--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@typescript-eslint/parser": "^5.59.5",
     "autoprefixer": "^10.4.14",
     "daisyui": "^2.51.6",
-    "drizzle-kit": "0.17.6",
+    "drizzle-kit": "0.17.6-76e73f3",
     "drizzle-orm": "0.25.4",
     "eslint": "^8.40.0",
     "eslint-plugin-qwik": "^1.1.1",
