--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "@typescript-eslint/parser": "^5.59.11",
     "autoprefixer": "^10.4.14",
     "daisyui": "^3.1.1",
-    "drizzle-kit": "0.18.0-27440c3",
-    "drizzle-orm": "0.26.5",
-    "eslint": "^8.42.0",
+    "drizzle-kit": "^0.18.0-27440c3",
+    "drizzle-orm": "0.27.0",
+    "eslint": "^8.43.0",
     "eslint-plugin-qwik": "^1.1.5",
     "postcss": "^8.4.24",
     "prettier": "2.8.8",
