--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "engines": {
     "node": ">=15.0.0"
   },
-  "version": "0.3.0",
+  "version": "0.5.0",
   "private": true,
   "scripts": {
     "build": "qwik build",
@@ -12,6 +12,7 @@
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
+    "db:push": "pnpm drizzle-kit push:mysql --config ./drizzle.config.ts",
     "deploy": "vercel deploy",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
@@ -20,13 +21,14 @@
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik",
-    "db:push": "pnpm drizzle-kit push:mysql --config ./drizzle.config.ts"
+    "test.e2e": "playwright test",
+    "qwik": "qwik"
   },
   "devDependencies": {
     "@builder.io/qwik": "^1.1.5",
     "@builder.io/qwik-city": "^1.1.5",
     "@planetscale/database": "^1.7.0",
+    "@playwright/test": "^1.35.1",
     "@tailwindcss/typography": "^0.5.9",
     "@types/eslint": "^8.40.2",
     "@types/node": "^20.3.1",
