--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "tld-item-logger",
   "description": "The Long Dark Item Logger app with map built with Qwik",
   "engines": {
-    "node": ">=15.0.0"
+    "node": ">=16.0.0"
   },
-  "version": "0.5.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "build": "qwik build",
@@ -27,14 +27,20 @@
   "devDependencies": {
     "@builder.io/qwik": "^1.2.7",
     "@builder.io/qwik-city": "^1.2.7",
+    "@builder.io/qwik-react": "^0.5.0",
     "@planetscale/database": "^1.10.0",
     "@playwright/test": "^1.37.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/eslint": "^8.44.2",
     "@types/node": "^20.5.1",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "autoprefixer": "^10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "daisyui": "^3.5.1",
     "drizzle-kit": "^0.18.0-27440c3",
     "drizzle-orm": "0.28.2",
@@ -42,7 +48,11 @@
     "eslint-plugin-qwik": "^1.2.7",
     "postcss": "^8.4.28",
     "prettier": "3.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "^5.1.6",
     "undici": "^5.23.0",
     "vercel": "^31.4.0",
