--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "tld-item-logger",
   "description": "The Long Dark Item Logger app with map built with Qwik",
   "engines": {
-    "node": ">=15.0.0"
+    "node": ">=16.0.0"
   },
-  "version": "0.3.0",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "build": "qwik build",
@@ -12,6 +12,7 @@
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.server": "vite build -c adapters/vercel-edge/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
+    "db:push": "pnpm drizzle-kit push:mysql --config ./drizzle.config.ts",
     "deploy": "vercel deploy",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
@@ -20,31 +21,42 @@
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik",
-    "db:push": "pnpm drizzle-kit push:mysql --config ./drizzle.config.ts"
+    "test.e2e": "playwright test",
+    "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^0.103.0",
-    "@builder.io/qwik-city": "^0.104.0",
-    "@planetscale/database": "^1.7.0",
+    "@builder.io/qwik": "^1.2.7",
+    "@builder.io/qwik-city": "^1.2.7",
+    "@builder.io/qwik-react": "^0.5.0",
+    "@planetscale/database": "^1.10.0",
+    "@playwright/test": "^1.37.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/eslint": "^8.37.0",
-    "@types/node": "^18.16.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
-    "autoprefixer": "^10.4.14",
-    "daisyui": "^2.51.6",
-    "drizzle-kit": "0.17.6-76e73f3",
-    "drizzle-orm": "0.25.3",
-    "eslint": "^8.39.0",
-    "eslint-plugin-qwik": "^0.103.0",
-    "postcss": "^8.4.23",
-    "prettier": "2.8.8",
-    "tailwindcss": "^3.3.1",
-    "typescript": "^5.0.4",
-    "undici": "^5.22.0",
-    "vercel": "^28.20.0",
-    "vite": "^4.3.2",
+    "@types/eslint": "^8.44.2",
+    "@types/node": "^20.5.1",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "autoprefixer": "^10.4.15",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "drizzle-kit": "^0.18.0-27440c3",
+    "drizzle-orm": "0.28.2",
+    "eslint": "^8.45.0",
+    "eslint-plugin-qwik": "^1.2.7",
+    "postcss": "^8.4.28",
+    "prettier": "3.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.6",
+    "typescript": "^5.1.6",
+    "undici": "^5.23.0",
+    "vercel": "^31.4.0",
+    "vite": "^4.4.9",
     "vite-tsconfig-paths": "^4.2.0"
   }
 }
