--- a/package.json
+++ b/package.json
@@ -25,28 +25,28 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^1.2.7",
-    "@builder.io/qwik-city": "^1.2.7",
-    "@planetscale/database": "^1.10.0",
+    "@builder.io/qwik": "^1.2.10",
+    "@builder.io/qwik-city": "^1.2.10",
+    "@planetscale/database": "^1.11.0",
     "@playwright/test": "^1.37.1",
-    "@tailwindcss/typography": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/eslint": "^8.44.2",
-    "@types/node": "^20.5.1",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
+    "@types/node": "^20.6.0",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
     "autoprefixer": "^10.4.15",
-    "daisyui": "^3.5.1",
+    "daisyui": "^3.7.3",
     "drizzle-kit": "^0.18.0-27440c3",
-    "drizzle-orm": "0.28.2",
-    "eslint": "^8.45.0",
-    "eslint-plugin-qwik": "^1.2.7",
-    "postcss": "^8.4.28",
-    "prettier": "3.0.2",
+    "drizzle-orm": "0.28.6",
+    "eslint": "8.45.0",
+    "eslint-plugin-qwik": "^1.2.10",
+    "postcss": "^8.4.29",
+    "prettier": "3.0.3",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.1.6",
-    "undici": "^5.23.0",
-    "vercel": "^31.4.0",
+    "typescript": "^5.2.2",
+    "undici": "^5.24.0",
+    "vercel": "^32.2.0",
     "vite": "^4.4.9",
-    "vite-tsconfig-paths": "^4.2.0"
+    "vite-tsconfig-paths": "^4.2.1"
   }
 }
